player in fase di sviluppo, L ok, Centera rivedere

--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
 <li><img src="./assets/img/search.svg" alt="cerca"><a href="#">Cerca</a></li>
 <li><img src="./assets/img/libreria.svg" alt="libreria"><a href="#">La tua libreria</a></li>
               </ul>
-            <ul class="icons-bottom">
+              <div class="playlist-section">
+                <h3>PLAYLIST</h3>
+                <ul>
+                    <li><i class="fas fa-plus-square"></i> Crea Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+
+                </ul>
+            </div>
+
+
+              <ul class="icons-bottom">
                 <li><img src="./assets/img/download.svg" alt="download"><a href="#">Installa app</a></li>
                 <li><img src="./assets/img/profile.svg" alt="profilo"><a href="#">Saverio Zanetti</a></li>
             </ul>
