--- a/index.html
+++ b/index.html
@@ -18,39 +18,45 @@
     <div class="wrapper debug">
         <div id="top-content" class="debug">
             <div id="sidebar" class="debug">
-              <ul class="icons-top">
-<li><img src="./assets/img/logo-small.svg" alt="logo"><a href="#"></a></li>
-<li><img src="./assets/img/home.svg" alt="home"><a href="#">Home</a></li>
-<li><img src="./assets/img/search.svg" alt="cerca"><a href="#">Cerca</a></li>
-<li><img src="./assets/img/libreria.svg" alt="libreria"><a href="#">La tua libreria</a></li>
-              </ul>
-              <div class="playlist-section">
-                <h3>PLAYLIST</h3>
-                <ul>
-                    <li><i class="fas fa-plus-square"></i> Crea Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-
+                <ul class="icons-top">
+                    <li>
+                        <a href="#">
+                            <img class="s-display-none" src="./assets/img/logo-small.svg" alt="logo">
+                            <img class="s-display-inline-block" src="./assets/img/logo.svg" alt="big-logo">
+                        </a>
+                    </li>
+                    <li><a href="#"><img src="./assets/img/home.svg" alt="home"><span
+                                class="display-none s-display-inline-block">Home</span></a></li>
+                    <li><a href="#"><img src="./assets/img/search.svg" alt="cerca"><span
+                                class="display-none s-display-inline-block">Cerca</span></a></li>
+                    <li><a href="#"><img src="./assets/img/libreria.svg" alt="libreria"><span
+                                class="display-none s-display-inline-block">La tua libreria</span></a></li>
+                </ul>
+                <div class="playlist-section display-none s-display-inline-block">
+                    <h3 class="playlist-title">PLAYLIST</h3>
+                    <ul>
+                        <li>
+                            <div class="add-playlist"><i class="fas fa-plus-square"></i> Crea Playlist</div>
+                        </li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </div>
+                <ul class="icons-bottom">
+                    <li><div class="download-button"><a href="#"><img src="./assets/img/download.svg" alt="download">
+                        <span class="display-none s-display-inline-block">Installa app</span></a></div></li>
+                    <li><img src="./assets/img/profile.svg" alt="profilo"><a href="#">Saverio Zanetti</a></li>
                 </ul>
             </div>
-
-
-              <ul class="icons-bottom">
-                <li><img src="./assets/img/download.svg" alt="download"><a href="#">Installa app</a></li>
-                <li><img src="./assets/img/profile.svg" alt="profilo"><a href="#">Saverio Zanetti</a></li>
-            </ul>
-            </div>
-       
-
             <div id="main-content" class="debug">
                 <header id="main-content-header">button</header>
                 <main>
-<!--
+                    <!--
                     <ul class="nav">
                         <li><a href="#">In evidenza</a></li>
                         <li><a href="#">Podcast</a></li>
@@ -64,7 +70,37 @@
             </div>
 
         </div>
-        <div id="player"></div>
+        <div id="player">
+            <div class="player-left">
+                <img src="./assets/img/sinister.jpeg" alt="Playing Song">
+                <div class="brano">
+                    <div class="artista">Sinister</div>
+                    <div class="titolo">Brano Nome</div>
+                </div>
+                <div class="buttons-L">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+            <div class="player-center">
+<ul class="player-controls">
+<li><i class="fa-solid fa-shuffle"></i></li>
+<li><i class="fa-solid fa-martini-glass"></i></li>
+<li class="circledplay"><i class="fa-solid fa-play"></i></li>
+<li><i class="fa-solid fa-martini-glass"></i></li>
+<li><i class="fa-solid fa-arrow-rotate-right"></i></li>
+</ul>
+<div class="time-bar">
+<span class="playing-time">0:25</span>
+<span class="playing-bar"></span>
+<span class="total-time">4:35</span>
+</div>
+
+
+            </div>
+            <div class="player-right"></div>
+
+        </div>
 
 
     </div>
