--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="wrapper debug">
+    <div class="wrapper">
         <div id="top-content" class="debug">
             <div id="sidebar" class="debug">
                 <ul class="icons-top">
@@ -48,8 +48,10 @@
                     </ul>
                 </div>
                 <ul class="icons-bottom">
-                    <li><div class="download-button"><a href="#"><img src="./assets/img/download.svg" alt="download">
-                        <span class="display-none s-display-inline-block">Installa app</span></a></div></li>
+                    <li>
+                        <div class="download-button"><a href="#"><img src="./assets/img/download.svg" alt="download">
+                                <span class="display-none s-display-inline-block">Installa app</span></a></div>
+                    </li>
                     <li><img src="./assets/img/profile.svg" alt="profilo"><a href="#">Saverio Zanetti</a></li>
                 </ul>
             </div>
@@ -83,22 +85,38 @@
                 </div>
             </div>
             <div class="player-center">
-<ul class="player-controls">
-<li><i class="fa-solid fa-shuffle"></i></li>
-<li><i class="fa-solid fa-martini-glass"></i></li>
-<li class="circledplay"><i class="fa-solid fa-play"></i></li>
-<li><i class="fa-solid fa-martini-glass"></i></li>
-<li><i class="fa-solid fa-arrow-rotate-right"></i></li>
-</ul>
-<div class="time-bar">
-<span class="playing-time">0:25</span>
-<span class="playing-bar"></span>
-<span class="total-time">4:35</span>
-</div>
+                <ul class="player-controls">
+                    <li><i class="fa-solid fa-shuffle"></i></li>
+                    <li><i class="fa-solid fa-martini-glass"></i></li>
+                    <li class="circledplay"><i class="fa-regular fa-circle-play"></i></li>
+                    <li><i class="fa-solid fa-martini-glass"></i></li>
+                    <li><i class="fa-solid fa-arrow-rotate-right"></i></li>
+                </ul>
+                <div class="time-bar">
+                    <span class="playing-time">0:25</span>
+                    <span class="playing-bar">
+                        <div class="totaltime-bar">
+                            <div class="actualtime-bar"></div>
+                        </div>
+                    </span>
+                    <span class="total-time">4:35</span>
+                </div>
 
 
             </div>
-            <div class="player-right"></div>
+            <div class="player-right">
+                <ul class="streaming-controls">
+                    <li><i class="fa-solid fa-bars"></i></li>
+                    <li><i class="fa-solid fa-desktop"></i></li>
+                    <li><i class="fa-solid fa-volume-high"></i></li>
+                </ul>
+                <div class="volume-bar">
+                    <div class="totalvolume-bar">
+                        <div class="actualvolume-bar"></div>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
