--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="player-center">
                 <ul class="player-controls">
                     <li><i class="fa-solid fa-shuffle"></i></li>
-                    <li><i class="fa-solid fa-martini-glass"></i></li>
+                    <li><i class="fa-solid fa-backward-step"></i></li>
                     <li class="circledplay"><i class="fa-regular fa-circle-play"></i></li>
-                    <li><i class="fa-solid fa-martini-glass"></i></li>
+                    <li><i class="fa-solid fa-forward-step"></i></li>
                     <li><i class="fa-solid fa-arrow-rotate-right"></i></li>
                 </ul>
                 <div class="time-bar">
@@ -106,8 +106,8 @@
             </div>
             <div class="player-right">
                 <ul class="streaming-controls">
-                    <li><i class="fa-solid fa-bars"></i></li>
-                    <li><i class="fa-solid fa-desktop"></i></li>
+                    <li><i class="fa-solid fa-list"></i></li>
+                    <li><i class="fa-solid fa-display"></i></li>
                     <li><i class="fa-solid fa-volume-high"></i></li>
                 </ul>
                 <div class="volume-bar">
